<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.samset.languagechange.Third">

    <TextView android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:text="@string/action_search"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/action_logout"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/language_setting"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />


    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/action_change_pass"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/action_devinfo"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/action_logout"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/language_setting"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />


    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/action_change_pass"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

</LinearLayout>
