<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >
            <TextView android:text="LangChange"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                />



            </RelativeLayout>
</android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_below="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/action_change_pass"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/action_devinfo"
            android:id="@+id/txt5"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/action_search"
            android:id="@+id/txt6"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/action_logout"
            android:id="@+id/txt7"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt8"
            android:text="@string/language_setting"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />


<Button
    android:id="@+id/btn"
    android:text="Btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>
